@@ -249,7 +249,7 @@ y yy y   semicore load.c
 yyyy yyy semicore format.c
 yyyy yyy r5rs syntax.c
 yyyy yyy r5rs procedure.c
-yyyy yyy r5rs number.c
+yyyyyyyy r5rs number.c
 yyyy yyy r5rs list.c
 yyyy yyy r5rs deep-cadrs.c
          r5rs char.c
@@ -766,14 +766,14 @@ corner case tests: yamaken@r3880
 
 file:              number.c
 category:          r5rs
-spec by eyes:      yamaken@r3943
-spec by tests:     yamaken@r3943
+spec by eyes:      yamaken@r3943, yamaken@r4071
+spec by tests:     yamaken@r3943, yamaken@r4071
 general review:    yamaken@r3943
 64-bit by eyes:    yamaken@r3943
-64-bit by tests:   
+64-bit by tests:   yamaken@r4071
 coding style:      yamaken@r3943
-normal case tests: yamaken@r3943
-corner case tests: yamaken@r3943
+normal case tests: yamaken@r3943, yamaken@r4071
+corner case tests: yamaken@r3943, yamaken@r4071
 
 file:              list.c
 category:          r5rs
@@ -1043,6 +1043,17 @@ corner case tests:
 Log
 ---
 2006-12-07  YamaKen <yamaken AT bp.iij4u.or.jp>
+
+        * number.c
+          - QA done @r4071
+          - Fix broken out of range error detection of scm_string2number()
+            which fails every conversion once after the error has occurred
+
+          Details:
+          - "64-bit by tests" have been passed with previously written
+            test-number-{arith,cmp,conv,literal}.scm with some trivial fixes
+            for the tests, on both fatty and compact on
+            x86_64-unknown-linux-gnu
 
         * format.c
           - QA done again @r4070 except for "64-bit by tests"
