@@ -985,14 +985,14 @@
        (string-eval "(assert-equal? (tn) -2 (*  576460752303423487 2))")
        (string-eval "(assert-equal? (tn) 0  (* -576460752303423488 2))")
        (string-eval
-        "(assert-equal? (tn)  576460752303423487 (*  576460752303423487 3))")
+        "(assert-equal? (tn)  576460752303423485 (*  576460752303423487 3))")
        (string-eval
         "(assert-equal? (tn) -576460752303423488 (* -576460752303423488 3))"))
       ((64)
        (string-eval "(assert-equal? (tn) -2 (*  9223372036854775807 2))")
        (string-eval "(assert-equal? (tn) 0  (* -9223372036854775808 2))")
        (string-eval
-        "(assert-equal? (tn)  9223372036854775807 (*  9223372036854775807 3))")
+        "(assert-equal? (tn)  9223372036854775805 (*  9223372036854775807 3))")
        (string-eval
         "(assert-equal? (tn) -9223372036854775808 (* -9223372036854775808 3))"))
       (else
@@ -1326,16 +1326,16 @@
       (if (>= fixnum-bits 60)
           (begin
             (tn "/ 2 args 64-bit")
-            (string-eval "(assert-equal? (tn)  2         (/  13121090146595  5121))")
-            (string-eval "(assert-equal? (tn) -2         (/  13121090146595 -5121))")
-            (string-eval "(assert-equal? (tn) -2         (/ -13121090146595  5121))")
-            (string-eval "(assert-equal? (tn)  2         (/ -13121090146595 -5121))")
+            (string-eval "(assert-equal? (tn)  2         (/  13121090146595  5121297354163))")
+            (string-eval "(assert-equal? (tn) -2         (/  13121090146595 -5121297354163))")
+            (string-eval "(assert-equal? (tn) -2         (/ -13121090146595  5121297354163))")
+            (string-eval "(assert-equal? (tn)  2         (/ -13121090146595 -5121297354163))")
             (string-eval "(assert-error  (tn) (lambda () (/  13121090146595 0)))")
             (string-eval "(assert-error  (tn) (lambda () (/ -13121090146595 0)))")
-            (string-eval "(assert-equal? (tn) 0          (/  5121  13121090146595))")
-            (string-eval "(assert-equal? (tn) 0          (/ -5121  13121090146595))")
-            (string-eval "(assert-equal? (tn) 0          (/  5121 -13121090146595))")
-            (string-eval "(assert-equal? (tn) 0          (/ -5121 -13121090146595))")
+            (string-eval "(assert-equal? (tn) 0          (/  5121297354163  13121090146595))")
+            (string-eval "(assert-equal? (tn) 0          (/ -5121297354163  13121090146595))")
+            (string-eval "(assert-equal? (tn) 0          (/  5121297354163 -13121090146595))")
+            (string-eval "(assert-equal? (tn) 0          (/ -5121297354163 -13121090146595))")
             (string-eval "(assert-equal? (tn) 0          (/     0  13121090146595))")
             (string-eval "(assert-equal? (tn) 0          (/     0 -13121090146595))")))
       (tn "/ 3 args")
@@ -1635,10 +1635,10 @@
 (if (>= fixnum-bits 60)
     (begin
       (tn "quotient 64-bit")
-      (string-eval "(assert-equal? (tn)  2         (quotient  13121090146595  5121))")
-      (string-eval "(assert-equal? (tn) -2         (quotient  13121090146595 -5121))")
-      (string-eval "(assert-equal? (tn) -2         (quotient -13121090146595  5121))")
-      (string-eval "(assert-equal? (tn)  2         (quotient -13121090146595 -5121))")
+      (string-eval "(assert-equal? (tn)  2         (quotient  13121090146595  5121297354163))")
+      (string-eval "(assert-equal? (tn) -2         (quotient  13121090146595 -5121297354163))")
+      (string-eval "(assert-equal? (tn) -2         (quotient -13121090146595  5121297354163))")
+      (string-eval "(assert-equal? (tn)  2         (quotient -13121090146595 -5121297354163))")
       (string-eval "(assert-error  (tn) (lambda () (quotient  13121090146595 0)))")
       (string-eval "(assert-error  (tn) (lambda () (quotient -13121090146595 0)))")
       (string-eval "(assert-equal? (tn) 0          (quotient  5121  13121090146595))")
