@@ -637,7 +637,7 @@
       (string-eval "(assert-eq? (tn) #f (> -13121090146595 -956397711204 0))")
       (string-eval "(assert-eq? (tn) #f (>  956397711204 0  13121090146595))")
       (string-eval "(assert-eq? (tn) #f (> -956397711204 0  13121090146595))")
-      (string-eval "(assert-eq? (tn) #f (>  956397711204 0 -13121090146595))")
+      (string-eval "(assert-eq? (tn) #t (>  956397711204 0 -13121090146595))")
       (string-eval "(assert-eq? (tn) #f (> -956397711204 0 -13121090146595))")
       (string-eval "(assert-eq? (tn) #f (>  13121090146595 0  956397711204))")
       (string-eval "(assert-eq? (tn) #t (>  13121090146595 0 -956397711204))")
@@ -906,7 +906,7 @@
       (string-eval "(assert-eq? (tn) #f (>=   -956397711204  13121090146595))")
       (string-eval "(assert-eq? (tn) #t (>=    956397711204 -13121090146595))")
       (string-eval "(assert-eq? (tn) #t (>=   -956397711204 -13121090146595))")
-      (string-eval "(assert-eq? (tn) #f (>=  13121090146595    956397711204))")
+      (string-eval "(assert-eq? (tn) #t (>=  13121090146595    956397711204))")
       (string-eval "(assert-eq? (tn) #t (>=  13121090146595   -956397711204))")
       (string-eval "(assert-eq? (tn) #f (>= -13121090146595    956397711204))")
       (string-eval "(assert-eq? (tn) #f (>= -13121090146595   -956397711204))")))
@@ -1044,17 +1044,17 @@
       (string-eval "(assert-eq? (tn) #f (>= 0  956397711204  13121090146595))")
       (string-eval "(assert-eq? (tn) #f (>= 0 -956397711204  13121090146595))")
       (string-eval "(assert-eq? (tn) #f (>= 0  956397711204 -13121090146595))")
-      (string-eval "(assert-eq? (tn) #f (>= 0 -956397711204 -13121090146595))")
-      (string-eval "(assert-eq? (tn) #f (>=  13121090146595  956397711204 0))")
+      (string-eval "(assert-eq? (tn) #t (>= 0 -956397711204 -13121090146595))")
+      (string-eval "(assert-eq? (tn) #t (>=  13121090146595  956397711204 0))")
       (string-eval "(assert-eq? (tn) #f (>=  13121090146595 -956397711204 0))")
       (string-eval "(assert-eq? (tn) #f (>= -13121090146595  956397711204 0))")
       (string-eval "(assert-eq? (tn) #f (>= -13121090146595 -956397711204 0))")
       (string-eval "(assert-eq? (tn) #f (>=  956397711204 0  13121090146595))")
       (string-eval "(assert-eq? (tn) #f (>= -956397711204 0  13121090146595))")
-      (string-eval "(assert-eq? (tn) #f (>=  956397711204 0 -13121090146595))")
+      (string-eval "(assert-eq? (tn) #t (>=  956397711204 0 -13121090146595))")
       (string-eval "(assert-eq? (tn) #f (>= -956397711204 0 -13121090146595))")
       (string-eval "(assert-eq? (tn) #f (>=  13121090146595 0  956397711204))")
-      (string-eval "(assert-eq? (tn) #f (>=  13121090146595 0 -956397711204))")
+      (string-eval "(assert-eq? (tn) #t (>=  13121090146595 0 -956397711204))")
       (string-eval "(assert-eq? (tn) #f (>= -13121090146595 0  956397711204))")
       (string-eval "(assert-eq? (tn) #f (>= -13121090146595 0 -956397711204))")))
 (tn ">= many args")
